# cyber-guardian

./: .gitignore  ARTEMIS_MIGRATION_PROMPT.md  AUTOMATED_SCANNING.md  BLUE_TEAM_INTEGRATION_RESULTS.md  CLAMAV_DEPLOYMENT_COMPLETE.md  CODEBASE_SCAN_SUMMARY.md  CVE_VERIFICATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_VERIFICATION_SCAN.md  EMERGENCY-server-failure-2026-02-20.md  EVALUATOR_TEST_REPORT.md  FINAL-STATUS-emergency-action-needed.md  FINAL_SCAN_RESULTS.md  IMPLEMENTATION_COMPLETE.md  INCIDENT_RESPONSE_2026-03-10.md  MALWARE_DASHBOARD_INTEGRATION_PLAN.md  MALWARE_SCANNING_IMPLEMENTATION.md  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  MITIGATION_DASHBOARD.md  MITIGATION_SUMMARY.md  MITIGATION_WORKFLOW.md  PRODUCTION_SCAN_REPORT.md  QUICK_START_MITIGATION.md  README.md  REMEDIATION_PLAN.md  SCANNER_BACKLOG.md  SECURITY_MITIGATION_PLAN.md  SECURITY_TODO_INDEX.md  SERVER_SCRIPTS.md  SETUP_COMPLETE.md  TEST_VERIFICATION_DEMO.md  TODO.md  TODO_REDTEAM.md  TODO_SECURITY.md  VERIFICATION_TEST_RESULTS.md  all-sites-status-2026-02-20.md  config.yaml  config_alfred_fqdn.yaml  config_alfred_redteam.yaml  (+15 more)
blueteam/: __init__.py  cli.py  cli_codebase_scan.py  config.yaml  db.py  models.py  pyproject.toml
blueteam/alerting/: __init__.py  engine.py
blueteam/api/: __init__.py  codebase_scanner.py  config_provider.py  issue_tracker.py
blueteam/blueteam/: __init__.py  cli.py  config.py  monitor.py
blueteam/collectors/: db_audit.py  nginx_log.py  php_error.py  syslog_parser.py
blueteam/correlator/: __init__.py  rules.py
blueteam/incidents/: __init__.py  manager.py
blueteam/reports/: posture.py
blueteam/tests/: test_alerting.py  test_correlator.py
redteam/: .gitignore  __init__.py  base.py  cli.py  client.py  compliance_bridge.py  config.yaml  pyproject.toml  registry.py  runner.py  scoring.py  state.py  wp_client.py
redteam/attacks/: __init__.py
redteam/cleanup/: __init__.py  db.py
redteam/cve/: __init__.py  __main__.py  cache.py  engine.py  models.py  rate_limiter.py  sync.py
redteam/evaluators/: __init__.py  behavior.py  keyword.py
redteam/redteam/: base.py  client.py  config.py  registry.py
redteam/reporters/: __init__.py  console.py  hierarchical_json.py  html.py  json_report.py
redteam/reports.bak/: hierarchical-20260308_214053.json  redteam-report-20260307_191547.html  redteam-report-20260307_191547.json  redteam-report-20260307_194951.html  redteam-report-20260307_194951.json  redteam-report-20260307_200101.html  redteam-report-20260307_200101.json  redteam-report-20260307_200638.html  redteam-report-20260307_200638.json  redteam-report-20260307_214209.json  redteam-report-20260307_214230.json  redteam-report-20260307_214328.json  redteam-report-20260307_214339.json  redteam-report-20260307_214340.json  redteam-report-20260307_214447.json  redteam-report-20260307_214449.json  redteam-report-20260307_214503.json  redteam-report-20260307_215610.json  redteam-report-20260307_222716.json  redteam-report-20260307_222718.json  redteam-report-20260307_222719.json  redteam-report-20260308_184540.html  redteam-report-20260308_184540.json
redteam/scripts/: setup_test_users.py  teardown_test_users.py
redteam/tests/: test_ai_attacks.py  test_cleanup.py  test_hierarchical_reporter.py  (+3 more)
(+565 files in other folders)
